commitafter ading more components

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,9 @@
   <head>
     <style>
       body{
-     
+         
         background-image: url(/airplaneImage.jpeg);
+        width:100vw;
       }
     </style>
     <meta charset="utf-8" />
