commit after editing css

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
     <style>
       body{
          
-        background-image: url(/airplaneImage.jpeg);
+       background-color:lightblue;
         width:100vw;
+        height:100vh;
       }
     </style>
     <meta charset="utf-8" />
@@ -45,6 +46,7 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
+        background-image: url(/airplaneImage.jpeg); 
     -->
   </body>
 </html>
